# design-pattern-sample-rust

./: Cargo.toml
src/adapter/: banner.rs  main.rs  print.rs  print_banner.rs
src/builder/: builder.rs  director.rs  html_builder.rs  main.rs  text_builder.rs
src/factory_method/: framework.rs  idcard.rs  main.rs
src/iterator/: book.rs  book_shelf.rs  main.rs
src/template_method/: abstract_display.rs  char_display.rs  main.rs  string_display.rs
