[package]
name = "design-pattern-sample-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iterator"
path = "src/iterator/main.rs"

[[bin]]
name = "adapter"
path = "src/adapter/main.rs"

[[bin]]
name = "template_method"
path = "src/template_method/main.rs"

[[bin]]
name = "factory_method"
path = "src/factory_method/main.rs"

[[bin]]
name = "builder"
path = "src/builder/main.rs"

[dependencies]
